<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgroud"
        android:scaleType="centerCrop"
        android:alpha="0.8"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColorHint="@color/hintColor"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_edittext"
                android:layout_margin="10dp"
                android:hint="@string/prompt_email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/wit"
                android:id="@+id/username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColorHint="@color/hintColor"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_edittext"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:textColor="@color/wit"
                android:id="@+id/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password"
            android:text="@string/forgot_password"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textColor="@color/wit"
            android:layout_marginStart="10dp"/>


        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:textColor="@color/wit"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/create_account"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/purple"
            android:text="@string/new_account"
            android:textColor="@color/wit"
            android:textSize="18sp"
            />




        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


    </LinearLayout>


</RelativeLayout>